	* Alchemist - Done
	* Sage - Done
	* Monk Quest - Botting An Acolyte Atm
Lupus
	* looking for exploits, optimization, bugs hunt
	* Lolz - 100%
Aria
	* Devnpc
	* Correct typos/mistakes
	* Update stuff
kobra_k88
	* Optimize WoE
Shinigami
	* Organizing/Optmizing/Checking for Typo in all NPCs.
Mass Zero
	* Novice Training Ground.
	* (Probably unofficial) Lou Yang NPC's, mobs, etc...
Shadowlady
	* Marriage (Fix, optimization) ?%

MC Cameri
	* Bank NPC - Now 100% done for new payon
	* Warper NPC - 100%, fixed memory consumption problem
	* Heal NPC - 100%

Other Ppl	
	* Their Work?

== Changelog ==

Date		Added
======
12/22
	* Added Arrow Quivers to the scrolls_arrows.txt and removed some rare arrows from the shop [Lupus]
	* Corrected a typo in other/pvp.txt [Ajarn]

12/21
	* Corrected position of start { in a crap load of scripts. [Ajarn]
		- jA decided that it had to be on the definition line
		- So, if it wasn't, the next script wouldn't load
        * Corrected script errors in devnpc.txt [celest]
	
12/20	
	* Addded npcs_athena.conf, OA style [MC Cameri]
        * made samesex marriages give out the correct rings [MouseJstr]
	* Changed $progress -> $@progress in wedding.txt (shadowlady put in comments but didn't add to code) [Aria]
	* xmas.txt: Added Xmas Jakk, fixed 2 possible items exploits, fixed reward Box ID [Lupus]
12/18	
	* My NPC is back in action [Aria]
	* Added 2 temp kRO shops which sell Arrows, Magic Scrolls. Prices,coords, sprites are unsure, but exploitless [Lupus]

12/12	
	* Added Town Inn's counting in my npc/other/mc_cameri/warper.txt [MC Cameri]

12/11	
	* Fixed memory consumption in npc/other/mc_cameri/warper.txt [MC Cameri]

12/10
	* Added npc/other/mc_cameri/warper.txt, a warp npc just like warper2.txt that shows how many people are on each map. [MC Cameri]
	* Newgearquests (14 files of 16) fixed possible exploits, added a missing close; 
	  According to kro, changed ingredients of Indead Hairband quest [Lupus]
12/08