@@ -19,15 +19,16 @@ int log_trade(struct map_session_data *sd,struct map_session_data *target_sd,int
 int log_vend(struct map_session_data *sd,struct map_session_data *vsd,int n,int amount,int zeny);
 int log_zeny(struct map_session_data *sd, struct map_session_data *target_sd,int amount);
 int log_atcommand(struct map_session_data *sd, const char *message);
+int log_npc(struct map_session_data *sd, const char *message);
 
 int log_config_read(char *cfgName);
 
 extern struct Log_Config {
 	int enable_logs;
 	int sql_logs;
-	int branch, drop, mvpdrop, present, produce, refine, trade, vend, zeny, gm;
-	char log_branch[32], log_drop[32], log_mvpdrop[32], log_present[32], log_produce[32], log_refine[32], log_trade[32], log_vend[32], log_gm[32];
-	char log_branch_db[32], log_drop_db[32], log_mvpdrop_db[32], log_present_db[32], log_produce_db[32], log_refine_db[32], log_trade_db[32], log_vend_db[32], log_gm_db[32];
+	int branch, drop, mvpdrop, present, produce, refine, trade, vend, zeny, gm, npc;
+	char log_branch[32], log_drop[32], log_mvpdrop[32], log_present[32], log_produce[32], log_refine[32], log_trade[32], log_vend[32], log_gm[32], log_npc[32];
+	char log_branch_db[32], log_drop_db[32], log_mvpdrop_db[32], log_present_db[32], log_produce_db[32], log_refine_db[32], log_trade_db[32], log_vend_db[32], log_gm_db[32], log_npc_db[32];
 } log_config;
 
 #endif
